[tool.poetry]
name = "demo-beginner-asyncio"
version = "0.1.0"
description = ""
authors = ["Jeremy Schulman <jeremy.schulman@mlb.com>"]

[tool.poetry.dependencies]
python = "^3.8"
rich = "^11.2.0"
aio-eapi = "^0.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"
invoke = "^1.6.0"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.interrogate]
    fail-under = 0
    verbose = 1
    color = true
    ignore-module = true
    exclude = ["tasks.py", "examples", "build", "venv"]

#[tool.poetry.scripts]
#    netcad = 'netcad.cli.netcad:script'
#    netcam = 'netcad.cli.netcam:script'
